--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "scripts": {
     "postinstall": "tsd reinstall --overwrite --save",
+    "start": "./node_modules/babel/bin/babel-node bin/app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
