--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/markogresak/vine-data-mining",
   "dependencies": {
-    "babel": "^5.1.10"
+    "babel": "^5.1.10",
+    "es6-promise": "^2.1.0"
   }
 }
