--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,6 +14,7 @@
     ],
     "files": [
         "./src/app.ts",
+        "./typings/es6-promise/es6-promise.d.ts",
         "./typings/node/node.d.ts",
         "./typings/request/request.d.ts",
         "./typings/tsd.d.ts"
