--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "scripts": {
     "postinstall": "tsd reinstall --overwrite --save",
+    "prestart": "./node_modules/typescript/bin/tsc --project .",
     "start": "./node_modules/babel/bin/babel-node bin/app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -19,6 +20,7 @@
   "homepage": "https://github.com/markogresak/vine-data-mining",
   "dependencies": {
     "babel": "^5.1.10",
-    "es6-promise": "^2.1.0"
+    "es6-promise": "^2.1.0",
+    "typescript": "^1.5.0-alpha"
   }
 }
