--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,7 @@
         "outDir": "bin",
         "declaration": false,
         "noImplicitAny": false,
-        "removeComments": true,
+        "removeComments": false,
         "noLib": false
     },
     "filesGlob": [
