move VineAPI declarations to separate folder, split in multiple files

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,7 +13,13 @@
     ],
     "files": [
         "./src/Vine.ts",
-        "./src/VineAPI.d.ts",
+        "./src/api-declarations/ApiResponse.d.ts",
+        "./src/api-declarations/AuthenticateData.d.ts",
+        "./src/api-declarations/PaginatedResponse.d.ts",
+        "./src/api-declarations/UserData.d.ts",
+        "./src/api-declarations/UserSearchData.d.ts",
+        "./src/api-declarations/VideoRecord.d.ts",
+        "./src/api-declarations/VineAPI.d.ts",
         "./src/app.ts",
         "./typings/es6-promise/es6-promise.d.ts",
         "./typings/form-data/form-data.d.ts",
