--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "dependencies": {
     "babel": "^5.1.10",
     "es6-promise": "^2.1.0",
+    "request": "^2.55.0",
     "typescript": "^1.5.0-alpha"
   }
 }
