--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,14 +12,14 @@
         "!./node_modules/**/*.ts"
     ],
     "files": [
-        "./src/Vine.ts",
-        "./src/api-declarations/ApiResponse.d.ts",
-        "./src/api-declarations/AuthenticateData.d.ts",
-        "./src/api-declarations/PaginatedResponse.d.ts",
-        "./src/api-declarations/UserData.d.ts",
-        "./src/api-declarations/UserSearchData.d.ts",
-        "./src/api-declarations/VideoRecord.d.ts",
-        "./src/api-declarations/VineAPI.d.ts",
+        "./src/api/VineApi.ts",
+        "./src/api/api-declarations/ApiResponse.d.ts",
+        "./src/api/api-declarations/AuthenticateData.d.ts",
+        "./src/api/api-declarations/PaginatedResponse.d.ts",
+        "./src/api/api-declarations/UserData.d.ts",
+        "./src/api/api-declarations/UserSearchData.d.ts",
+        "./src/api/api-declarations/VideoRecord.d.ts",
+        "./src/api/api-declarations/VineAPI.d.ts",
         "./src/app.ts",
         "./typings/es6-promise/es6-promise.d.ts",
         "./typings/form-data/form-data.d.ts",
