--- a/package.json
+++ b/package.json
@@ -21,9 +21,9 @@
   },
   "homepage": "https://github.com/markogresak/vine-data-mining",
   "dependencies": {
-    "babel": "^5.1.10",
-    "es6-promise": "^2.1.0",
+    "babel": "^5.4.7",
+    "es6-promise": "^2.1.1",
     "request": "^2.55.0",
-    "typescript": "^1.5.0-alpha"
+    "typescript": "^1.5.0-beta"
   }
 }
