--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "dependencies": {
     "babel": "^5.4.7",
     "es6-promise": "^2.1.1",
+    "orchestrate": "^0.4.3",
     "request": "^2.55.0",
     "typescript": "^1.5.0-beta"
   }
