--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,7 +23,9 @@
         "./src/api/api-declarations/VideoRecord.d.ts",
         "./src/api/api-declarations/VineAPI.d.ts",
         "./src/app.ts",
+        "./typings/body-parser/body-parser.d.ts",
         "./typings/es6-promise/es6-promise.d.ts",
+        "./typings/express/express.d.ts",
         "./typings/form-data/form-data.d.ts",
         "./typings/node/node.d.ts",
         "./typings/request/request.d.ts",
