--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,6 +23,7 @@
         "./src/api/api-declarations/VideoRecord.d.ts",
         "./src/api/api-declarations/VineAPI.d.ts",
         "./src/app.ts",
+        "./src/router/index.ts",
         "./typings/body-parser/body-parser.d.ts",
         "./typings/es6-promise/es6-promise.d.ts",
         "./typings/express/express.d.ts",
