--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,6 +25,7 @@
         "./src/app.ts",
         "./src/helpers/express-init.ts",
         "./src/helpers/ping.ts",
+        "./src/master/job.ts",
         "./src/router/index.ts",
         "./typings/body-parser/body-parser.d.ts",
         "./typings/es6-promise/es6-promise.d.ts",
