--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,6 +24,7 @@
         "./src/app.ts",
         "./src/helpers/expressInit.ts",
         "./src/helpers/ping.ts",
+        "./src/master/JobType.ts",
         "./src/master/job.ts",
         "./src/router/index.ts",
         "./typings/body-parser/body-parser.d.ts",
