--- a/package.json
+++ b/package.json
@@ -25,10 +25,15 @@
   "dependencies": {
     "babel": "^5.4.7",
     "body-parser": "^1.12.4",
+    "chai": "^2.3.0",
+    "chai-as-promised": "^5.0.0",
     "es6-promise": "^2.1.1",
     "express": "^4.12.4",
+    "mocha": "^2.2.5",
     "orchestrate": "^0.4.3",
     "request": "^2.55.0",
+    "sinon": "^1.14.1",
+    "sinon-chai": "^2.7.0",
     "typescript": "^1.5.0-beta"
   }
 }
