update paths to adapt to new output in bin, use shorter .bin module path
After adding test folder, bin has src/ and test/ folders instead of
direct src/* files.

--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "description": "",
   "scripts": {
     "postinstall": "tsd reinstall --overwrite --save",
-    "prestart": "./node_modules/typescript/bin/tsc --project .",
-    "start": "./node_modules/babel/bin/babel-node bin/app.js",
-    "router": "npm run-script prestart && ./node_modules/babel/bin/babel-node bin/router/index.js",
-    "master": "npm run-script prestart && ./node_modules/babel/bin/babel-node bin/master/index.js",
+    "prestart": "./node_modules/.bin/tsc --project .",
+    "start": "node_modules/.bin/babel-node bin/src/app.js",
+    "router": "npm run-script prestart && node_modules/.bin/babel-node bin/src/router/index.js",
+    "master": "npm run-script prestart && node_modules/.bin/babel-node bin/src/master/index.js",
     "watch": "nodemon -v &>/dev/null && nodemon -w bin bin/app.js",
     "w": "npm run-script watch",
     "test": "echo \"Error: no test specified\" && exit 1"
