--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "master": "npm run-script prestart && node_modules/.bin/babel-node bin/src/master/index.js",
     "watch": "nodemon -v &>/dev/null && nodemon -w bin bin/app.js",
     "w": "npm run-script watch",
+    "pretest": "npm run-script prestart",
     "test": "./node_modules/.bin/mocha --opts $([[ $NODE_ENV == 'development' ]] && echo '.mocha.dev.opts' || echo '.mocha.ci.opts')"
   },
   "repository": {
