--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "dependencies": {
     "babel": "^5.4.7",
     "body-parser": "^1.12.4",
+    "canihazip": "^1.0.1",
     "chai": "^2.3.0",
     "chai-as-promised": "^5.0.0",
     "es6-promise": "^2.1.1",
