rename ping.ts to communicator.ts warp ping in a class
More general, communicator class will be used for all master-to-worker
communications.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,8 +23,8 @@
         "./src/api/api-declarations/UserSearchData.d.ts",
         "./src/api/api-declarations/VideoRecord.d.ts",
         "./src/app.ts",
+        "./src/helpers/communicator.ts",
         "./src/helpers/expressInit.ts",
-        "./src/helpers/ping.ts",
         "./src/master/JobState.ts",
         "./src/master/JobType.ts",
         "./src/master/index.ts",
