add array helper and tests

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,6 +23,7 @@
         "./src/api/api-declarations/UserSearchData.d.ts",
         "./src/api/api-declarations/VideoRecord.d.ts",
         "./src/app.ts",
+        "./src/helpers/arrayHelper.ts",
         "./src/helpers/communicator.ts",
         "./src/helpers/expressInit.ts",
         "./src/master/JobState.ts",
@@ -30,6 +31,7 @@
         "./src/master/index.ts",
         "./src/master/job.ts",
         "./src/router/index.ts",
+        "./test/test-arrayHelper.ts",
         "./test/test-job.ts",
         "./typings/body-parser/body-parser.d.ts",
         "./typings/chai-as-promised/chai-as-promised.d.ts",
