add renaming app.ts to index.ts in tsconfig.json

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,10 +22,10 @@
         "./src/api/api-declarations/UserData.d.ts",
         "./src/api/api-declarations/UserSearchData.d.ts",
         "./src/api/api-declarations/VideoRecord.d.ts",
-        "./src/app.ts",
         "./src/helpers/arrayHelper.ts",
         "./src/helpers/communicator.ts",
         "./src/helpers/expressInit.ts",
+        "./src/index.ts",
         "./src/master/JobState.ts",
         "./src/master/JobType.ts",
         "./src/master/index.ts",
