--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "prestart": "./node_modules/.bin/tsc --project .",
     "router": "npm run-script prestart && node_modules/.bin/babel-node bin/src/router/index.js",
     "master": "npm run-script prestart && node_modules/.bin/babel-node bin/src/master/index.js",
-    "watch": "nodemon -v &>/dev/null && nodemon -w bin bin/app.js",
     "start": "node_modules/.bin/babel-node bin/src/index.js",
+    "watch": "nodemon -v &>/dev/null && nodemon -w bin -x 'node_modules/.bin/babel-node bin/src/index.js'",
     "w": "npm run-script watch",
     "pretest": "npm run-script prestart",
     "test": "./node_modules/.bin/mocha --opts $([ $NODE_ENV == 'development' ] && echo '.mocha.dev.opts' || echo '.mocha.ci.opts')"
