--- a/tsconfig.json
+++ b/tsconfig.json
@@ -32,6 +32,7 @@
         "./src/master/job.ts",
         "./src/router/index.ts",
         "./src/worker/index.ts",
+        "./src/worker/worker-profiler.ts",
         "./test/test-arrayHelper.ts",
         "./test/test-job.ts",
         "./typings/body-parser/body-parser.d.ts",
