add SimpleWorker class
Simplified router-master-worker stack, performs all actions. Using
JobStore to do actions, linked in a neat .then chain.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -33,6 +33,7 @@
         "./src/master/index.ts",
         "./src/master/job.ts",
         "./src/router/index.ts",
+        "./src/simple-worker/index.ts",
         "./src/simple-worker/job-store.ts",
         "./src/worker/index.ts",
         "./src/worker/worker-profiler.ts",
