--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "chai-as-promised": "^5.0.0",
     "es6-promise": "^2.1.1",
     "express": "^4.12.4",
+    "mkdirp": "^0.5.1",
     "mocha": "^2.2.5",
     "orchestrate": "^0.4.3",
     "performance-now": "^0.2.0",
