--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "orchestrate": "^0.4.3",
     "performance-now": "^0.2.0",
     "request": "^2.55.0",
+    "reverse-line-reader": "^0.2.6",
     "sinon": "^1.14.1",
     "sinon-chai": "^2.7.0",
     "tsd": "^0.6.0",
