add VinesUsers interface, extending UserProfileData
This is stored by GetVinesUsers.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -38,6 +38,7 @@
         "./src/simple-worker/index.ts",
         "./src/simple-worker/job-store.ts",
         "./src/simple-worker/local-storage.ts",
+        "./src/simple-worker/users-vines.d.ts",
         "./src/worker/index.ts",
         "./src/worker/worker-profiler.ts",
         "./test/test-arrayHelper.ts",
